# myev

./: .gitignore  .mypy.ini  .pylintrc  LICENSE  pyproject.toml  readme.md
myev/: __init__.py  environment.py  validators.py
tests/: test_myev.py
