[tool.poetry]
name = "myev"
version = "0.4.0"
description = "Environment variables fetcher."
authors = ["Łukasz Wieczorek <wieczorek1990@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

