[tool.poetry]
name = "myev"
version = "0.5.2"
description = "Environment variables fetcher."
authors = ["Łukasz Wieczorek <wieczorek1990@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
validators = "^0.22.0"

[tool.poetry.dev-dependencies]
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
