[tool.poetry]
name = "myev"
version = "0.10.0"
description = "Environment variables fetcher."
authors = ["Łukasz Wieczorek <wieczorek1990@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
validators = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
